tests/type_errors/sum_func_string.nos
# expect_error: does not implement Num
main() = sum(["a", "b", "c"])
